// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter Component Highlighter renders 1`] = `
<div>
  <div />
</div>
`;

exports[`Highlighter Component Highlighter renders with highlight 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      {}
    </div>
    <div
      class="gds-layout-col"
    >
      {"extra":{},"highlighted":true,"inputValue":"OLDDATA","data":"OLDDATA","readOnly":true}
    </div>
  </div>
</div>
`;

exports[`Highlighter Component Highlighter renders with highlight and inValidElement 1`] = `
<div>
  
</div>
`;
